--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,15 +32,16 @@ header{
 }
 
 .logo{
+    background: rgba(19, 18, 18, 0.1); /* fallback colour. Make sure this is just one solid colour. */
+    background: -webkit-linear-gradient(rgba(0, 0, 0,6), rgba(0, 0, 0, 0.1)), url("../images/test.jpg");
+    background: linear-gradient(rgba(0, 0, 0,6), rgba(0, 0, 0, 0.1)), url("../images/test.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 360px;
 
 
-    background: rgba(19, 18, 18, 0.1); /* fallback colour. Make sure this is just one solid colour. */
-    background: -webkit-linear-gradient(rgba(0, 0, 0,6), rgba(0, 0, 0, 0.1)), url("../images/test.jpg");
-    background: linear-gradient(rgba(0, 0, 0,6), rgba(0, 0, 0, 0.1)), url("../images/test.jpg");
+
     transition: all 1s ease-in-out;
     -moz-transition: all 1s ease-in-out;
     -webkit-transition: all 1s ease-in-out;
@@ -59,7 +60,7 @@ header{
     font-weight: 200;
     font-size: 28px;
     margin-top: 20px;
-    margin-bottom: 2px;
+    margin-bottom: 130px;
     color: #ffffff
 }
 
@@ -74,4 +75,45 @@ header{
 #nav li{
     font-size: 14px;
     padding: 0;
+}
+
+#nav{
+    margin:0;
+}
+
+.menu-item{
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menu-item a{
+    width: 100%;
+    text-decoration: none;
+    color: white;
+    height:120px;
+}
+
+.menu-item a i{
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menu-item span{
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14p;
+    font-weight: 3oo;
+    letter-spacing: 3px;
+}
+
+/*----------------------Hover.css*/
+.hvr-sweep-to-bottom:before{
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
