--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons{
+    background-color: #fff;
+}
+
 .ui-menu-color-home{
     background-color: #e67e22;
 }
@@ -17,7 +21,14 @@
 }
 
 .ui-menu-color-download{
-    background-color: #525252
+    background-color: #2c2c2c
+}
+
+.section-heading{
+    font-family: "Exo" sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 /*----------------------Heading*/
@@ -112,6 +123,21 @@ header{
     letter-spacing: 3px;
 }
 
+
+/*----------------------Three reasons*/
+.three-reasons-icon{
+    font-size: 26px;
+    color:#e67e22;
+}
+
+.three-reasons-heading{
+    margin-bottom: 15px;
+}
+
+section{
+    color: #2c2c2c;
+}
+
 /*----------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before{
@@ -188,4 +214,14 @@ h1,h2,h3,h4,h5{
 
 .inline-block{
     display: inline-block;
+}
+
+.row-table{
+    display: table;
+}
+
+.section-column{
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
 }
