--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@
     background-color: #224b72
 }
 
+.bg-color-contact{
+    background:white;
+}
+
 .ui-menu-color-download{
     background-color: #2c2c2c
 }
@@ -341,4 +345,37 @@ h1,h2,h3,h4,h5{
 
 .history-items{
     margin-bottom:30px;
+}
+
+/*----------------------contact form*/
+.contact-heading{ 
+    font-family: "Exo", sans-serif;
+    font-weight:300;
+    margin-top:25px;
+    margin-bottom:20px;
+}
+
+.center-form{
+    padding-top:10px;
+    margin: 0 auto;
+    max-width:70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/*----------------------media query*/
+
+@media(min-width: 992px){
+    .center-form{
+        padding-top:30px;
+        min-height:240px;
+        margin: 0 auto;
+        max-width:50%;
+}
+
 }
