--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,14 @@
     background-color: #2c2c2c
 }
 
+.ui-menu-color-github{
+    background-color: #49b683
+}
+
+.ui-menu-color-interests{
+    background-color: #8d4c4c
+}
+
 .history-heading,
 .section-heading{
     font-family: "Exo" sans-serif;
