--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
     background-color: #f4f4f4;
 }
 
+
 .ui-menu-color-home{
     background-color: #e67e22;
 }
@@ -24,6 +25,10 @@
 .bg-color-work-history,
 .ui-menu-color-contact{
     background-color: #224b72
+}
+
+.bg-color-conferences{
+    background-color: #676767;
 }
 
 .bg-color-contact{
@@ -68,7 +73,7 @@ header{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 360px;
+    min-height: 44.5vh;
 
 
 
@@ -374,6 +379,12 @@ button[type="submit"] {
     margin-bottom: 20px;
     color: #fafafa;
     background-color: #e84610;
+}
+
+div#map {
+    min-width: 400px;
+    min-height: 400px;
+    border-radius: 25px;
 }
 
 /*----------------------media query*/
