--- a/assets/css/github-styles.css
+++ b/assets/css/github-styles.css
@@ -75,12 +75,20 @@ img {
 }
 
 #loader {
-  display: block;
-  width: 200px;
-  height: 200px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
   margin: 0 auto;
+  position: relative;
+  left:25%;
 }
 
+
+#loader img{
+    border-radius: 25%;
+    -webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
+    filter: grayscale(100%);
+}
 
 /* page content styles */
 
